force-app/main/default/objects/PurchaseOpportunity__c/fields/Estimate_DifferenceLevel__c.field-meta.xml
<CustomField>
    <fullName>Estimate_DifferenceLevel__c</fullName>
    <formula>IF( (100-((Estimate__c / (SalesAmount__c - IF( ISBLANK( RecyclingFee__c ),0, RecyclingFee__c )))*100)) &lt;-30,&quot;d2 -31％以下&quot;,
IF( (100-((Estimate__c / (SalesAmount__c - IF( ISBLANK( RecyclingFee__c ),0, RecyclingFee__c )))*100)) &lt;=-20,&quot;c2 -30％～-20％&quot;,
IF( (100-((Estimate__c / (SalesAmount__c - IF( ISBLANK( RecyclingFee__c ),0, RecyclingFee__c )))*100)) &lt;=-10,&quot;b2 -20％～-10％&quot;,
IF( (100-((Estimate__c / (SalesAmount__c - IF( ISBLANK( RecyclingFee__c ),0, RecyclingFee__c )))*100)) &lt;=0,&quot;a2 -10％～0％&quot;,
IF( (100-((Estimate__c / (SalesAmount__c - IF( ISBLANK( RecyclingFee__c ),0, RecyclingFee__c )))*100)) &lt;=10,&quot;a1 0％～10％&quot;,
IF( (100-((Estimate__c / (SalesAmount__c - IF( ISBLANK( RecyclingFee__c ),0, RecyclingFee__c )))*100)) &lt;=20,&quot;b1 10％～20％&quot;,
IF( (100-((Estimate__c / (SalesAmount__c - IF( ISBLANK( RecyclingFee__c ),0, RecyclingFee__c )))*100)) &lt;=30,&quot;c1 20％～30％&quot;,
IF( (100-((Estimate__c / (SalesAmount__c - IF( ISBLANK( RecyclingFee__c ),0, RecyclingFee__c )))*100)) &gt;30,&quot;d1 31％以上&quot;,
IF( ISBLANK(Estimate__c ),&quot;売り予想未入力&quot;,&quot;&quot;)))))))))</formula>
    <inlineHelpText>100-（（売り予想÷（売上金額-リサイクル料金））×100）
マイナスの場合は売り予想が売上金額よりも高く、プラスの場合は売り予想が売上金額より低いです。</inlineHelpText>
    <label>削除予定_売り予想の差額割合</label>
    <type>Text</type>
</CustomField>