force-app/main/default/objects/PurchaseOpportunity__c/fields/Estimate_TeamPricing__c.field-meta.xml
<CustomField>
    <fullName>Estimate_TeamPricing__c</fullName>
    <description>佐野
プライシングチームが売り金額相談の回答内容を残すための項目
2025/06/18　プライシングチーム売り予想→AA相場に変更
2025/07/02　AA相場→提示上限金額に変更</description>
    <inlineHelpText>プライシングチーム査定時のオークション相場を記載。期限は入力後30日間まで。</inlineHelpText>
    <label>提示上限金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>