force-app/main/default/objects/PurchaseOpportunity__c/fields/Evaluationpoints__c.field-meta.xml
<CustomField>
    <fullName>Evaluationpoints__c</fullName>
    <description>オークション会場で実際についた評価点を入力する</description>
    <inlineHelpText>オークション会場で実際についた評価点</inlineHelpText>
    <label>評価点</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4.5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>***</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>