force-app/main/default/objects/PurchaseOpportunity__c/fields/Evaluationpoints_Bidtime__c.field-meta.xml
<CustomField>
    <fullName>Evaluationpoints_Bidtime__c</fullName>
    <description>海外販売で使用</description>
    <label>落札時評価点</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4.5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>***</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>