force-app/main/default/objects/PurchaseOpportunity__c/fields/Evaluationpoints_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Evaluationpoints_Prospect__c</fullName>
    <description>査定時に判断した評価点を入力する</description>
    <inlineHelpText>査定時に判断した評価点</inlineHelpText>
    <label>見込評価点</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4.5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>***</fullName>
            </value>
            <value>
                <fullName>データ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>