force-app/main/default/objects/PurchaseOpportunity__c/fields/exhibit_memo__c.field-meta.xml
<CustomField>
    <fullName>exhibit_memo__c</fullName>
    <description>出品情報タブに表示、出品時の注意事項を入力する</description>
    <label>注意事項</label>
    <type>TextArea</type>
</CustomField>