force-app/main/default/objects/PurchaseOpportunity__c/fields/Exhibition_data_details__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_data_details__c</fullName>
    <description>井川</description>
    <label>出品データ詳細</label>
    <type>TextArea</type>
</CustomField>