force-app/main/default/objects/PurchaseOpportunity__c/fields/expected_price__c.field-meta.xml
<CustomField>
    <fullName>expected_price__c</fullName>
    <description>出品情報タブに表示される、営業が入力する、入力した情報はオークションサイトに連携される</description>
    <label>仕入希望価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>