force-app/main/default/objects/PurchaseOpportunity__c/fields/ExpectedSalesAfterRepair__c.field-meta.xml
<CustomField>
    <fullName>ExpectedSalesAfterRepair__c</fullName>
    <inlineHelpText>修理した後でいくらで売れるかの予想金額</inlineHelpText>
    <label>修理後売却予想額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>