force-app/main/default/objects/PurchaseOpportunity__c/fields/Experience_shift__c.field-meta.xml
<CustomField>
    <fullName>Experience_shift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>実績スライド分</label>
    <type>Checkbox</type>
</CustomField>