force-app/main/default/objects/PurchaseOpportunity__c/fields/Experience_shift_Approved__c.field-meta.xml
<CustomField>
    <fullName>Experience_shift_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>実績スライド承認済み</label>
    <type>Checkbox</type>
</CustomField>