force-app/main/default/objects/PurchaseOpportunity__c/fields/ExperienceCount__c.field-meta.xml
<CustomField>
    <fullName>ExperienceCount__c</fullName>
    <description>売上日が入っている場合、1カウントする</description>
    <formula>IF ( ISBLANK( SalesDate__c ), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>