force-app/main/default/objects/PurchaseOpportunity__c/fields/flg_asssessor_owner_match__c.field-meta.xml
<CustomField>
    <fullName>flg_asssessor_owner_match__c</fullName>
    <description>行動デザインシート作成のための分析に使用</description>
    <formula>OwnerId = AssessmentUser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>所有者=査定担当者の時True</inlineHelpText>
    <label>査定担当者と所有者の一致</label>
    <type>Checkbox</type>
</CustomField>