force-app/main/default/objects/PurchaseOpportunity__c/fields/form_num__c.field-meta.xml
<CustomField>
    <fullName>form_num__c</fullName>
    <label>型式指定番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>