force-app/main/default/objects/PurchaseOpportunity__c/fields/ForwardingCompany__c.field-meta.xml
<CustomField>
    <fullName>ForwardingCompany__c</fullName>
    <label>回送業者　★</label>
    <type>TextArea</type>
</CustomField>