force-app/main/default/objects/PurchaseOpportunity__c/fields/ForwardingdateChange_Cancel__c.field-meta.xml
<CustomField>
    <fullName>ForwardingdateChange_Cancel__c</fullName>
    <description>回送依頼作成画面に表示。回送依頼の依頼内容変更、依頼キャンセルを送る場合に入力する</description>
    <label>依頼内容変更/回送依頼キャンセル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>日程変更</fullName>
                <label>依頼内容変更（変更内容を入力）</label>
            </value>
            <value>
                <fullName>回送保留</fullName>
                <label>回送保留（伝達事項が無い場合は営業コメントを空白にする）</label>
            </value>
            <value>
                <fullName>依頼キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>