force-app/main/default/objects/PurchaseOpportunity__c/fields/ForwardingFee__c.field-meta.xml
<CustomField>
    <fullName>ForwardingFee__c</fullName>
    <label>回送料金　★</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>