force-app/main/default/objects/PurchaseOpportunity__c/fields/ForwardingRequest__c.field-meta.xml
<CustomField>
    <fullName>ForwardingRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>回送依頼</label>
    <referenceTo>ForwardingRequest__c</referenceTo>
    <relationshipLabel>買取商談</relationshipLabel>
    <relationshipName>ForwardingRequest</relationshipName>
    <type>Lookup</type>
</CustomField>