force-app/main/default/objects/PurchaseOpportunity__c/fields/ForwardingRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ForwardingRequestDate__c</fullName>
    <inlineHelpText>この項目を変更して保存することで、回送依頼が作成されます。</inlineHelpText>
    <label>回送依頼日</label>
    <type>Date</type>
</CustomField>