force-app/main/default/objects/PurchaseOpportunity__c/fields/ForwardingScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ForwardingScheduledDate__c</fullName>
    <label>回送予定日　★（引取日）</label>
    <type>Date</type>
</CustomField>