force-app/main/default/objects/PurchaseOpportunity__c/fields/fuel__c.field-meta.xml
<CustomField>
    <fullName>fuel__c</fullName>
    <description>車検証情報タブに表示、車検証に記載の燃料を入力する</description>
    <label>燃料</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>ガソリン</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>ディーゼル</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>LPG</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>電気</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>CNG</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>電気・ガソリン</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>圧縮水素</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>ガソリン・LPG</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>CNG・ガソリン</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>ディーゼル・電気</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>