force-app/main/default/objects/PurchaseOpportunity__c/fields/Gift_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_Sent_Date__c</fullName>
    <description>11行目のeギフトを送信した日付を入力</description>
    <label>ギフト送信日</label>
    <type>Date</type>
</CustomField>