force-app/main/default/objects/PurchaseOpportunity__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <description>過去に使用していたグレード項目、文字列が入力できる形式</description>
    <label>グレード</label>
    <type>TextArea</type>
</CustomField>