force-app/main/default/objects/PurchaseOpportunity__c/fields/Grade_en__c.field-meta.xml
<CustomField>
    <fullName>Grade_en__c</fullName>
    <description>グレードマスタの英字を表示
海外向け在庫表示で使用。山本</description>
    <formula>Mst_Grades__r.Name_en__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>グレード（英字）</label>
    <type>Text</type>
</CustomField>