force-app/main/default/objects/PurchaseOpportunity__c/fields/GrossProfitForecast__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitForecast__c</fullName>
    <description>営業が粗利予想を入力する。連携項目ではない</description>
    <label>粗利予想</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>