force-app/main/default/objects/PurchaseOpportunity__c/fields/HanamaruAA_Bid__c.field-meta.xml
<CustomField>
    <fullName>HanamaruAA_Bid__c</fullName>
    <description>自社オークション流札時の最高額入力</description>
    <inlineHelpText>自社オークション流札時の最高額入力</inlineHelpText>
    <label>ソコカラAA入札額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>