force-app/main/default/objects/PurchaseOpportunity__c/fields/HanamaruAA_Exhibited__c.field-meta.xml
<CustomField>
    <fullName>HanamaruAA_Exhibited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>自社オク流れ→他社出品に変更になる際にチェックを付ける</description>
    <inlineHelpText>自社オークション流れ→他社オク出品車は✔入力</inlineHelpText>
    <label>はなまるAA出品済み</label>
    <type>Checkbox</type>
</CustomField>