force-app/main/default/objects/PurchaseOpportunity__c/fields/HanamaruAA_SalesBack__c.field-meta.xml
<CustomField>
    <fullName>HanamaruAA_SalesBack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>他社オク出品後、自社出品し直して売却した場合にチェックをつける</description>
    <inlineHelpText>他社オークションへ出品後、結局自社売却</inlineHelpText>
    <label>自社戻し売却</label>
    <type>Checkbox</type>
</CustomField>