force-app/main/default/objects/PurchaseOpportunity__c/fields/HanamaruAA_VirtualGrossProfit__c.field-meta.xml
<CustomField>
    <fullName>HanamaruAA_VirtualGrossProfit__c</fullName>
    <description>はなまるAA入札金額で仮に売却した場合の仮想粗利　他社オク売却または修理→他社オク売却した際の利益検証に利用</description>
    <formula>HanamaruAA_Bid__c  -  ProposedPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>はなまるAA入札金額で仮に売却した場合の仮想粗利　他社オク売却または修理→他社オク売却した際の利益検証に利用</inlineHelpText>
    <label>はなまるAA売却時仮想粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>