force-app/main/default/objects/PurchaseOpportunity__c/fields/IFContact__c.field-meta.xml
<CustomField>
    <fullName>IFContact__c</fullName>
    <description>法人管理システムから連携される。法人案件の窓口担当者名が入力される</description>
    <inlineHelpText>法人のみ使用。法人システム上で取り込む取引先担当者名。こちらの名前を見てセールスフォース上の取引先担当者へ割り当ててください。</inlineHelpText>
    <label>連携用担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>