force-app/main/default/objects/PurchaseOpportunity__c/fields/InitialProfitForecast__c.field-meta.xml
<CustomField>
    <fullName>InitialProfitForecast__c</fullName>
    <formula>ExpectedSalesAfterRepair__c  -  ProposedPrice__c  -  RepairAmount_Prospect__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当初利益見込み</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>