force-app/main/default/objects/PurchaseOpportunity__c/fields/InquiryDate__c.field-meta.xml
<CustomField>
    <fullName>InquiryDate__c</fullName>
    <description>書類管理から売買契約書回収確認の際に使用。山本</description>
    <label>売買契約書回収確認日</label>
    <type>Date</type>
</CustomField>