force-app/main/default/objects/PurchaseOpportunity__c/fields/InquiryDate_cmp__c.field-meta.xml
<CustomField>
    <fullName>InquiryDate_cmp__c</fullName>
    <description>書類管理→営業の問い合わせに使用</description>
    <label>問い合わせ完了日</label>
    <type>Date</type>
</CustomField>