force-app/main/default/objects/PurchaseOpportunity__c/fields/InstallationDate_Repair__c.field-meta.xml
<CustomField>
    <fullName>InstallationDate_Repair__c</fullName>
    <inlineHelpText>修理先に車が搬入された日を入力</inlineHelpText>
    <label>修理先搬入日</label>
    <type>Date</type>
</CustomField>