force-app/main/default/objects/PurchaseOpportunity__c/fields/InstallationYearMonth_Repair__c.field-meta.xml
<CustomField>
    <fullName>InstallationYearMonth_Repair__c</fullName>
    <formula>IF ( AND( NOT( ISBLANK ( InstallationDate_Repair__c ) ) , MONTH( InstallationDate_Repair__c ) &lt; 10 ),
TEXT ( YEAR ( InstallationDate_Repair__c ) ) &amp; &quot;年&quot; &amp; &quot;0&quot; &amp; TEXT ( MONTH ( InstallationDate_Repair__c ) ) &amp; &quot;月&quot;,
IF ( AND( NOT( ISBLANK ( InstallationDate_Repair__c ) ) , MONTH( InstallationDate_Repair__c ) &gt;= 10 ),
TEXT ( YEAR ( InstallationDate_Repair__c ) ) &amp; &quot;年&quot; &amp; TEXT ( MONTH ( InstallationDate_Repair__c ) ) &amp; &quot;月&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>修理先搬入年月</label>
    <type>Text</type>
</CustomField>