force-app/main/default/objects/PurchaseOpportunity__c/fields/InstructionLimitDate__c.field-meta.xml
<CustomField>
    <fullName>InstructionLimitDate__c</fullName>
    <label>指示書リミット日時</label>
    <type>DateTime</type>
</CustomField>