force-app/main/default/objects/PurchaseOpportunity__c/fields/InventoryConfirmationDate__c.field-meta.xml
<CustomField>
    <fullName>InventoryConfirmationDate__c</fullName>
    <description>佐野
在庫管理用</description>
    <label>在庫案件確認日</label>
    <type>Date</type>
</CustomField>