force-app/main/default/objects/PurchaseOpportunity__c/fields/invoice_amount__c.field-meta.xml
<CustomField>
    <fullName>invoice_amount__c</fullName>
    <label>請求書金額（税込）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>