force-app/main/default/objects/PurchaseOpportunity__c/fields/ippanhoujinn__c.field-meta.xml
<CustomField>
    <fullName>ippanhoujinn__c</fullName>
    <formula>TEXT( Account__r.CorporationType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>一般/法人区分</label>
    <type>Text</type>
</CustomField>