force-app/main/default/objects/PurchaseOpportunity__c/fields/Irregular_Decision__c.field-meta.xml
<CustomField>
    <fullName>Irregular_Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>さの</description>
    <inlineHelpText>プライシング担当からオークション相場が入る前に金額提示した際はチェックする。</inlineHelpText>
    <label>イレギュラー決裁</label>
    <type>Checkbox</type>
</CustomField>