force-app/main/default/objects/PurchaseOpportunity__c/fields/IsCallCenter__c.field-meta.xml
<CustomField>
    <fullName>IsCallCenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リユース事業部経由</label>
    <type>Checkbox</type>
</CustomField>