force-app/main/default/objects/PurchaseOpportunity__c/fields/ItemManagementMemo__c.field-meta.xml
<CustomField>
    <fullName>ItemManagementMemo__c</fullName>
    <description>営業が案件を管理するためのメモを入力</description>
    <label>案件管理メモ</label>
    <type>TextArea</type>
</CustomField>