force-app/main/default/objects/PurchaseOpportunity__c/fields/JBOY__c.field-meta.xml
<CustomField>
    <fullName>JBOY__c</fullName>
    <defaultValue>false</defaultValue>
    <description>過去に使用していた項目、ジェイボーイ出品する際はチェックを付ける</description>
    <inlineHelpText>ジェイボーイで他社オクに出品する場合は✔</inlineHelpText>
    <label>削除予定_ジェイボーイ出品</label>
    <type>Checkbox</type>
</CustomField>