force-app/main/default/objects/PurchaseOpportunity__c/fields/JBOY_AdjustedAmount__c.field-meta.xml
<CustomField>
    <fullName>JBOY_AdjustedAmount__c</fullName>
    <description>ジェイボーイが提示する調整金額を入力する</description>
    <label>ジェイボーイ調整金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>