force-app/main/default/objects/PurchaseOpportunity__c/fields/JBOY_ProductType__c.field-meta.xml
<CustomField>
    <fullName>JBOY_ProductType__c</fullName>
    <description>現在使用している項目、ジェイボーイ出品の種別を選択する、他社AA時セクションに表示</description>
    <label>ジェイボーイ出品種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POSのみ使用</fullName>
                <label>出品リスト作成不要(0円)</label>
            </value>
            <value>
                <fullName>出品リスト代筆(2,000円)</fullName>
            </value>
            <value>
                <fullName>出品リスト必要</fullName>
                <label>出品リスト作成(8,000円)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>