force-app/main/default/objects/PurchaseOpportunity__c/fields/landing__c.field-meta.xml
<CustomField>
    <fullName>landing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>佐野</description>
    <label>搬入先</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mst_Yard__c.Name</field>
            <operation>notContain</operation>
            <value>使用停止,使用禁止</value>
        </filterItems>
        <filterItems>
            <field>Mst_Yard__c.Yard_code__c</field>
            <operation>notContain</operation>
            <value>XXX,999998,999999</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Yard__c</referenceTo>
    <relationshipLabel>買取商談 (着地)</relationshipLabel>
    <relationshipName>PurchaseOpportunity_landing</relationshipName>
    <type>Lookup</type>
</CustomField>