force-app/main/default/objects/PurchaseOpportunity__c/fields/LandTransportationDay1__c.field-meta.xml
<CustomField>
    <fullName>LandTransportationDay1__c</fullName>
    <description>台帳の陸運日1の項目が連携される</description>
    <label>陸運日1</label>
    <type>Date</type>
</CustomField>