force-app/main/default/objects/PurchaseOpportunity__c/fields/LandTransportationDay2__c.field-meta.xml
<CustomField>
    <fullName>LandTransportationDay2__c</fullName>
    <description>台帳の陸運日2の項目が連携される</description>
    <label>陸運日2</label>
    <type>Date</type>
</CustomField>