force-app/main/default/objects/PurchaseOpportunity__c/fields/LandTransportationDay3__c.field-meta.xml
<CustomField>
    <fullName>LandTransportationDay3__c</fullName>
    <description>台帳の陸運日3の項目が連携される</description>
    <label>陸運日3</label>
    <type>Date</type>
</CustomField>