force-app/main/default/objects/PurchaseOpportunity__c/fields/Last_business_negotiation_date__c.field-meta.xml
<CustomField>
    <fullName>Last_business_negotiation_date__c</fullName>
    <description>商談行動作成時に行動した時間が転記</description>
    <label>最終商談行動日</label>
    <type>DateTime</type>
</CustomField>