force-app/main/default/objects/PurchaseOpportunity__c/fields/last_ship_flg__c.field-meta.xml
<CustomField>
    <fullName>last_ship_flg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>dataspider連携項目。小売在庫での最終出庫日管理に使用。</description>
    <label>最終出庫フラグ</label>
    <type>Checkbox</type>
</CustomField>