force-app/main/default/objects/PurchaseOpportunity__c/fields/LeagalCheck__c.field-meta.xml
<CustomField>
    <fullName>LeagalCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>法務で売買契約書を確認したらチェックをつける</description>
    <inlineHelpText>法務部が使用</inlineHelpText>
    <label>法務課チェック（編集NG）</label>
    <type>Checkbox</type>
</CustomField>