force-app/main/default/objects/PurchaseOpportunity__c/fields/LeagalCheckDate__c.field-meta.xml
<CustomField>
    <fullName>LeagalCheckDate__c</fullName>
    <description>与儀
営業管理プロファイルと法務課のみが編集可能</description>
    <label>法務課チェック日</label>
    <type>Date</type>
</CustomField>