force-app/main/default/objects/PurchaseOpportunity__c/fields/LeagalMemo__c.field-meta.xml
<CustomField>
    <fullName>LeagalMemo__c</fullName>
    <description>与儀</description>
    <label>法務課メモ</label>
    <type>TextArea</type>
</CustomField>