force-app/main/default/objects/PurchaseOpportunity__c/fields/Ledger_supplierName__c.field-meta.xml
<CustomField>
    <fullName>Ledger_supplierName__c</fullName>
    <description>一回限りの振込の場合に台帳の仕入先名にする名称を営業が入力する</description>
    <inlineHelpText>カタカナでも可</inlineHelpText>
    <label>台帳仕入先名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>