force-app/main/default/objects/PurchaseOpportunity__c/fields/ListingEndsDate__c.field-meta.xml
<CustomField>
    <fullName>ListingEndsDate__c</fullName>
    <label>出品終了日</label>
    <type>Date</type>
</CustomField>