force-app/main/default/objects/PurchaseOpportunity__c/fields/Listingrequest__c.field-meta.xml
<CustomField>
    <fullName>Listingrequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>与儀</description>
    <label>削除予定_出品チーム依頼対応中</label>
    <type>Checkbox</type>
</CustomField>