force-app/main/default/objects/PurchaseOpportunity__c/fields/Listingrequest_status__c.field-meta.xml
<CustomField>
    <fullName>Listingrequest_status__c</fullName>
    <label>出品チーム依頼対応状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未対応</fullName>
            </value>
            <value>
                <fullName>対応中</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>