force-app/main/default/objects/PurchaseOpportunity__c/fields/LoadingSpecification__c.field-meta.xml
<CustomField>
    <fullName>LoadingSpecification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>引取依頼作成画面で積載指定する場合にチェックをつける</description>
    <label>積載指定</label>
    <type>Checkbox</type>
</CustomField>