force-app/main/default/objects/PurchaseOpportunity__c/fields/Lot_CorporationID__c.field-meta.xml
<CustomField>
    <fullName>Lot_CorporationID__c</fullName>
    <formula>IF ( LotNo__c =&quot;&quot;,  CorporationID__c ,LotNo__c)</formula>
    <label>ロット/法人ID</label>
    <type>Text</type>
</CustomField>