force-app/main/default/objects/PurchaseOpportunity__c/fields/Makers_en__c.field-meta.xml
<CustomField>
    <fullName>Makers_en__c</fullName>
    <formula>Mst_Models__r.Makers_en__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メーカー名（英字）</label>
    <type>Text</type>
</CustomField>