force-app/main/default/objects/PurchaseOpportunity__c/fields/Marketo__c.field-meta.xml
<CustomField>
    <fullName>Marketo__c</fullName>
    <description>買取商談を作成するきっかけを入力する（Marketo経由、電話営業、日本カーネット）
チェックボックスから選択リストに変更20240408</description>
    <label>商談発生経路</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>電話営業</fullName>
            </value>
            <value>
                <fullName>日本カーネット</fullName>
            </value>
            <value>
                <fullName>Murui</fullName>
            </value>
            <value>
                <fullName>タクシー広告</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>