force-app/main/default/objects/PurchaseOpportunity__c/fields/MarketPrice_Bidtime__c.field-meta.xml
<CustomField>
    <fullName>MarketPrice_Bidtime__c</fullName>
    <description>海外販売で使用</description>
    <label>落札時相場</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>