force-app/main/default/objects/PurchaseOpportunity__c/fields/maximum_payload__c.field-meta.xml
<CustomField>
    <fullName>maximum_payload__c</fullName>
    <description>佐野
1000(850)のような入力パターンがあるためテキスト項目</description>
    <label>最大積載量</label>
    <length>18</length>
    <type>Text</type>
</CustomField>